<resources>
    <string name="app_name">Jam Azan KL</string>
    <string name="isyak">Isyak</string>
    <string name="asar">Asar</string>
    <string name="zohor">Zohor</string>
    <string name="syuruk">Syuruk</string>
    <string name="subuh">Subuh</string>
    <string name="maghrib">Maghrib</string>
    <string name="jam_azan">JAM AZAN</string>
    <string name="setting_button1">l</string>
    <string name="setting_button2">l</string>
    <string name="to_main1">to_main1</string>
    <string name="derma_masjid">DERMA</string>
    <string name="rm_1">RM 1</string>
    <string name="rm_2">RM 2</string>
    <string name="rm_5">RM 5</string>
    <string name="rm_10">RM 10</string>
    <string name="rm_50">RM 50</string>
    <string name="dateislam">dateislam</string>
    <string name="tetee">tetee</string>
    <string name="test">test</string>
    <string name="meh">meh</string>
    <string name="rm50">RM50</string>
    <string name="derma_surau">Derma Surau</string>
    <string name="l">l</string>
    <string name="to_derma1">to_derma1</string>
    <string name="ubah_slide">Ubah Slide</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="noti">\'</string>
    <string name="to_notifikasi1">to_notifikasi1</string>
    <string name="to_ubahslide">to_ubahslide</string>
    <string name="to_tentangkami">to_tentangkami</string>
    <string name="muadz_leader">Muadz (Leader)</string>
    <string name="daniyal_front_end_programmer">Daniyal (Front End Programmer)</string>
    <string name="fahmi_documentation">Fahmi, Documentation</string>
    <string name="tentang_kamitext">TENTANG KAMI</string>
    <string name="derma_kepada_surau_saidina_abu_bakar_as_siddiq">DERMA KEPADA SURAU SAIDINA ABU BAKAR AS-SIDDIQ</string>
    <string name="sila_tekan_ruang_gambar_dibawah_untuk_menukar_gambar_di_slide">Sila tekan ruang gambar dibawah untuk menukar gambar di slide</string>
    <string name="ubah_slide_title">UBAH SLIDE</string>
    <string name="jam_azan_kl_ialah_aplikasi_mesra_muslim_yang_diterbitkan_oleh_sekumpulan_pelajar_universiti_pada_9_ogos_2021_aplikasi_ini_dapat_membantu_pengguna_dengan_memberi_5_notifikasi_waktu_solat_sehari_selain_itu_aplikasi_ini_juga_dilengkapi_dengan_tarikh_yang_berpandukan_kalendar_hijrah_mempunyai_platform_untuk_memudahkan_pengguna_memberi_sedekah_atas_talian_kepada_surau_saidina_abu_bakar_as_siddiq_untuk_menaikkan_ekonomi_surau_tersebut_terima_kasih_kerana_memuat_turun_applikasi_ini"><![CDATA[Jam Azan KL ialah aplikasi mesra muslim yang diterbitkan oleh sekumpulan pelajar universiti pada 9 ogos 2021. Aplikasi ini dapat membantu pengguna dengan memberi 5 notifikasi waktu solat sehari. Selain itu, Aplikasi ini juga dilengkapi dengan tarikh yang berpandukan kalendar hijrah & mempunyai platform untuk memudahkan pengguna memberi sedekah atas talian kepada Surau Saidina Abu Bakar As-Siddiq untuk menaikkan ekonomi surau tersebut. Terima kasih kerana memuat turun applikasi ini.]]></string>
    <string name="ahli_kumpulan_3">Ahli Kumpulan 3</string>
    <string name="muhammad_muadz_leader">Muhammad Muadz (Leader)</string>
    <string name="muhammad_haziq_documentation">Muhammad Haziq (Documentation)</string>
    <string name="muhammad_daniyal_front_end_programmer">Muhammad Daniyal (Front End Programmer)</string>
    <string name="muhammad_fahmi_documentation">Muhammad Fahmi (Documentation)</string>
    <string name="veenah_back_end_programmer1">Veenah (Back End Programmer)</string>
    <string name="tun_ainul_yaqin_front_end_programmer1">Tun Ainul Yaqin (Front End Programmer)</string>
    <string name="login">Login</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="edit">EDIT</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="tun_ainul_yaqin">Tun Ainul Yaqin</string>
    <string name="tunyaqin1012_gmail_com">tunyaqin1012@gmail.com</string>
    <string name="profilepicture1">profilepicture1</string>
    <string name="save">SAVE</string>
    <string name="to_editprofile">to_editprofile</string>
    <string name="to_settings4">to_settings4</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email_text">Email</string>
    <string name="are_you_sure_you_wish_to_sign_out">Are you sure you wish to sign out?</string>
    <string name="sign_out">Sign Out</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">UPDATE</string>
    <string name="new_password">new password</string>
    <string name="changepassword">Change Password</string>
    <string name="hantar">Hantar</string>
    <string name="sila_masukkan_e_mail_anda">Sila masukkan e-mail anda</string>
    <string name="new_password1">New Password</string>
    <string name="name_login">Name</string>
    <string name="sila_masukkan_butiran_di_bawah">Sila masukkan butiran di bawah</string>
    <string name="masukkan_data_baru">MASUKKAN DATA BARU</string>
    <string name="padam_data_sedia_ada">PADAM DATA SEDIA ADA</string>
    <string name="lihat_data">LIHAT DATA</string>
    <string name="pilih_tarikh_cth_30122021">Pilih tarikh (Cth: 30122021)</string>
    <string name="waktu_azan_huruf_besar">Waktu azan (HURUF BESAR)</string>
    <string name="tukar_masa_menjadi_cth_21_40">Tukar masa menjadi (Cth: 21:40)</string>
    <string name="kemaskini_data">KEMASKINI DATA</string>
    <string name="data_azan">DATA AZAN</string>
    <string name="sila_masukkan_butiran_di_bawah">Sila masukkan butiran di bawah</string>
    <string name="masukkan_data_baru">MASUKKAN DATA BARU</string>
    <string name="padam_data_sedia_ada">PADAM DATA SEDIA ADA</string>
    <string name="lihat_data">LIHAT DATA</string>
    <string name="kemaskini_data">KEMASKINI DATA</string>
    <string name="kenalan">Kenalan</string>
    <string name="tarikh_lahir">Tarikh Lahir</string>
    <string name="data_kalender_hijrah">DATA KALENDER HIJRAH</string>
    <string name="nama">Nama</string>
    <string name="data_azan1">Data Azan</string>
    <string name="data_kalendar_hijrah1">Data Kalendar Hijrah</string>
    <string name="pilih_tarikh_cth_30122021">Pilih tarikh (Cth: 30122021)</string>
    <string name="tukar_tarikh_hijrah_menjadi">Tukar tarikh hijrah menjadi</string>
    <string name="a_fresh_start_for_good_deeds">A Fresh Start for Good Deeds</string>

</resources>