<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TentangKami"
    android:background="@drawable/tentang_kami">


    <Button
        android:id="@+id/to_settings3"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:background="@color/Transparent"
        android:text="@string/to_main1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/text_tentang_kami"
        android:layout_width="269dp"
        android:layout_height="230dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/jam_azan_kl_ialah_aplikasi_mesra_muslim_yang_diterbitkan_oleh_sekumpulan_pelajar_universiti_pada_9_ogos_2021_aplikasi_ini_dapat_membantu_pengguna_dengan_memberi_5_notifikasi_waktu_solat_sehari_selain_itu_aplikasi_ini_juga_dilengkapi_dengan_tarikh_yang_berpandukan_kalendar_hijrah_mempunyai_platform_untuk_memudahkan_pengguna_memberi_sedekah_atas_talian_kepada_surau_saidina_abu_bakar_as_siddiq_untuk_menaikkan_ekonomi_surau_tersebut_terima_kasih_kerana_memuat_turun_applikasi_ini"
        android:textColor="#EDE9E9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <TextView
        android:id="@+id/title_tentang_kami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/tentang_kami"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/ahli_kumpulan3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ahli_kumpulan_3"
        android:textColor="#CFC9C9"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/muadz"
        android:layout_width="141dp"
        android:layout_height="34dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/muhammad_muadz_leader"
        android:textColor="#EFE5E5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665" />

    <TextView
        android:id="@+id/haziq"
        android:layout_width="157dp"
        android:layout_height="38dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/muhammad_haziq_documentation"
        android:textColor="#F4EBEB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <TextView
        android:id="@+id/daniyal"
        android:layout_width="163dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/muhammad_daniyal_front_end_programmer"
        android:textColor="#F1E6E6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665" />

    <TextView
        android:id="@+id/fahmi"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/muhammad_fahmi_documentation"
        android:textColor="#EFE8E8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />

    <TextView
        android:id="@+id/veenah"
        android:layout_width="159dp"
        android:layout_height="34dp"
        android:text="@string/veenah_back_end_programmer1"
        android:textColor="#FAF5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/yaqin"
        android:layout_width="146dp"
        android:layout_height="37dp"
        android:text="@string/tun_ainul_yaqin_front_end_programmer1"
        android:textColor="#F3EBEB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />
</androidx.constraintlayout.widget.ConstraintLayout>