<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Derma"
    android:background="@drawable/dermaback">

    <Button
        android:id="@+id/to_settings1"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:background="@color/Transparent"
        android:text="@string/to_main1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/rm5button"
        android:layout_width="239dp"
        android:layout_height="41dp"
        android:background="@color/Transparent"
        android:fontFamily="sans-serif-medium"
        android:text="@string/rm_5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/rm10button"
        android:layout_width="239dp"
        android:layout_height="44dp"
        android:background="@color/Transparent"
        android:fontFamily="sans-serif-medium"
        android:text="@string/rm_10"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />

    <Button
        android:id="@+id/rm50button"
        android:layout_width="239dp"
        android:layout_height="44dp"
        android:background="@color/Transparent"
        android:fontFamily="sans-serif-medium"
        android:text="@string/rm50"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <TextView
        android:id="@+id/dermaTitle"
        android:layout_width="286dp"
        android:layout_height="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/derma_masjid"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/textderma"
        android:layout_width="241dp"
        android:layout_height="89dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/derma_kepada_surau_saidina_abu_bakar_as_siddiq"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827" />

    <Button
        android:id="@+id/rm1button"
        android:layout_width="239dp"
        android:layout_height="44dp"
        android:background="@color/Transparent"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:text="@string/rm_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <Button
        android:id="@+id/rm2button"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:background="@color/Transparent"
        android:fontFamily="sans-serif-medium"
        android:text="@string/rm_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />
</androidx.constraintlayout.widget.ConstraintLayout>